--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https:mohamed4ahmed.github.io/raqyahdocuments",
+  "homepage": "https://mohamed4ahmed.github.io/raqyahdocuments",
   "name": "raqyahdocuments",
   "version": "0.1.0",
   "private": true,
